# chatanalysis

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  run-analysis.sh
configs/: chat-analysis.default.yaml
docs/: packaging-readiness-report.md  pipeline-desired-flow.md  skill-mining-llm-calls.md  user-guide.md
docs/architecture/: layer-map.md
docs/notebooks/: findings-summary.md  usage.md
docs/operators/: validation-and-troubleshooting.md
docs/semantic/: optional-mode.md
notebooks/: 01_corpus_exploration.ipynb  02_seed_term_analysis.ipynb  03_corpus_audit.ipynb  04_detector_review.ipynb  05_iterative_insight_analysis.ipynb  06_skill_mining_analysis.ipynb
pytest/: __main__.py
schemas/: corpus_view.schema.json  detector_run.schema.json  episode.schema.json  episode_index.schema.json  episode_turn.schema.json  evidence.schema.json  finding.schema.json  normalization_diagnostics.schema.json  parse_diagnostics.schema.json  query_result.schema.json  raw_event.schema.json  report_metadata.schema.json  run_manifest.schema.json  seed_run.schema.json  semantic_run.schema.json  session_inventory.schema.json  view_summary.schema.json
src/chatanalysis/: cli.py  config.py
tests/integration/: test_build_standard_views.py  test_discovery_stability.py  test_end_to_end_validation.py  test_extract_episodes_cli.py  test_generate_report.py  test_interactive_search_cli.py  test_normalize_sample_transcripts.py  test_notebook_exports.py  test_parse_diagnostics.py  test_required_detectors.py  test_seed_workflow.py  (+2 more)
(+71 files in other folders)
